Fix panel on mobile

--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -125,6 +125,7 @@ h3, h4 {
 }
 
 .panel {
+  display: flex;
   background: saturate(darken(@primary-color, 12%), 2%);
   color: #fff;
   min-height: 100vh;
@@ -233,9 +234,20 @@ h3, h4 {
   background: #eee;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 960px) {
   body {
     font-size: 14px;
+  }
+
+  .flex {
+    flex-wrap: wrap;
+  }
+
+  .panel {
+    display: block;
+    &-sidebar {
+      width: 100%;
+    }
   }
 
   .big-screen {
